--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -32,6 +32,8 @@ jobs:
         run: npm ci
       - name: Build
         run: npm run build
+        env:
+          BASE: "/space-rouge/"
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
