--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "format": "npx @biomejs/biome format --write src",
+    "lint": "npx @biomejs/biome lint src",
+    "typecheck": "npx tsc",
+    "prepare": "husky"
   },
   "dependencies": {
     "@lit-labs/signals": "^0.1.2",
@@ -26,6 +30,7 @@
     "@types/node": "^22.15.21",
     "@types/object-hash": "^3.0.6",
     "@types/three": "^0.173.0",
+    "husky": "^9.1.7",
     "typescript": "~5.7.2",
     "vite": "^6.1.0",
     "vitest": "^3.1.1"
