--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lit": "^3.2.1",
     "object-hash": "^3.0.0",
     "signal-utils": "^0.21.1",
+    "simplex-noise": "^4.0.3",
     "three": "^0.173.0",
     "three-gpu-pathtracer": "^0.0.23",
     "vite-plugin-glsl": "^1.3.3"
